--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -10,19 +10,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link text-light" href="/">Home <span class="sr-only"></span></a>
+                <a class="nav-link"href="/">Home <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-light" href="#aboutid">about</a>
+                <a class="nav-link"href="#aboutid">about</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link  text-light" href="#servicesid">service</a>
+                <a class="nav-link"href="#servicesid">service</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-light" href="#mapid">gallery</a>
+                <a class="nav-link" href="#mapid">gallery</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-light" href="#contactid">contact</a>
+                <a class="nav-link" href="#contactid">contact</a>
             </li>
         </ul>
     </div>
